# safos

./: .gdbinit  Cargo.toml  Makefile.toml  README.md  build.rs
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  mdbook.yml
doc/book/: book.toml
doc/book/src/: SUMMARY.md  chapter_1.md  setup.md
doc/book/src/booting/: entry.md  start.md
doc/book/src/footnote/: glossary.md
doc/device_tree/: virt.dtb  virt.dts
src/: main.rs
src/arch/: mod.rs
src/arch/riscv/: entry.rs  legacy_console.rs  machine.rs  mod.rs
src/linker/: linker_riscv.ld
src/linker/riscv/: virt.ld
