[workspace]
resolver = "2"
members = []

[workspace.package]
version = "0.0.1"
edition = "2021"
repository = "https://github.com/PitiBouchon/safos"

[package]
name = "safos"
authors = ["PtiBouchon"]
edition.workspace = true
version.workspace = true
repository.workspace = true
description = """
Safe OS microkernel written in Rust for the RiscV architecture
"""

[target.'cfg(target_arch = "riscv64")'.dependencies]
spin = "0.9.6"
riscv = "0.10.1"
sbi = "0.2.0"
fdt = "0.1.5"
